--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,9 @@
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:hardwareAccelerated="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/icons8_escuela_de_codificaci_n_de_mameluco_480"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/icons8_escuela_de_codificaci_n_de_mameluco_480"
         android:supportsRtl="true"
         android:theme="@style/Theme.Pstudy"
         android:usesCleartextTraffic="true"
