--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,23 +22,26 @@
         tools:targetApi="31">
         <activity
             android:name=".CursosAvanzadoActivity"
+            android:theme="@style/Theme.Pstudy.NoActionBar"
             android:exported="false" />
         <activity
             android:name=".CursosIntermedioActivity"
+            android:theme="@style/Theme.Pstudy.NoActionBar"
             android:exported="false" />
         <activity
             android:name=".CursosPrincipianteActivity"
+            android:theme="@style/Theme.Pstudy.NoActionBar"
             android:exported="false" />
         <activity
             android:name=".PerfilActivity"
+            android:theme="@style/Theme.Pstudy.NoActionBar"
             android:exported="false" />
         <activity
             android:name=".VideoActivity"
-            android:configChanges="keyboardHidden|orientation|screenSize"
             android:exported="false"
             android:hardwareAccelerated="true"
             android:theme="@style/Theme.Pstudy"
-            android:windowSoftInputMode="adjustResize" />
+            android:windowSoftInputMode="adjustResize"/>
         <activity
             android:name=".CursosActivity"
             android:exported="false"
